# mirrord

./: .dockerignore  .gitignore  .mise.toml  Dockerfile  README.md  REVIEW.md  compose.dev.yml  compose.yml  config.example.yaml  package.json  pyproject.toml
.github/workflows/: docker-publish.yml  lint.yml
app/: charts.py  cli.py  config.py  db.py  download_stats.py  geo.py  main.py  models.py  sync_engine.py
app/plugins/: arch_rsync.py  base.py  debmirror.py  ftpsync.py  local_dir.py  registry.py
app/static/: tailwind.css
app/templates/: browse.html  index.html  stats.html
app/web/: routes.py
scripts/: seed_dev_data.py
tests/: test_charts.py  test_db.py  test_models.py  test_proxy.py  test_sync_engine.py
