[project]
name = "mirrord"
version = "0.1.0"
description = "Mirror sync download server with pluggable backends"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "jinja2>=3.1.0",
    "pyyaml>=6.0",
    "apscheduler>=3.10.0",
]

[dependency-groups]
dev = ["ruff>=0.11"]

[tool.uv]
package = false

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "W",   # pycodestyle warnings
    "UP",  # pyupgrade
]

[tool.ruff.lint.isort]
known-first-party = ["app"]
